# Agentic-Builder-Tool

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  SETUP_GUIDE.md  USAGE.md  VERCEL_DEPLOYMENT.md  agent.py  docker-compose.yml  pyproject.toml  quick_check.sh  requirements.txt  server.py  setup_vercel_env.sh  tools.py  vercel.json  verify.py  verify_env.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  deploy.yaml
api/: diagnostic.py  index.py
cloud-build-samples/: cloudbuild.yaml
docs/: DEBUG_PLAYBOOK.md
src/: __init__.py  main.py
src/agent/: __init__.py  graph.py  state.py
src/api/: routes.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  requests.py  responses.py
src/tools/: __init__.py  gcs_tools.py  github_tools.py  vercel_tools.py
tests/: __init__.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_models.py
