[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-tool-builder"
version = "0.1.0"
description = "Autonomous DevOps Agent using LangGraph, FastAPI, and Cloud Tools"
requires-python = ">=3.11"
authors = [
    {name = "Agentic Tool Builder Team"}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Core Agent Framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    
    # API Framework
    "fastapi>=0.115.0",
    "langserve[all]>=0.3.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # Cloud & DevOps Tools
    "google-cloud-storage>=2.18.0",
    "pygithub>=2.4.0",
    "httpx>=0.27.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
